# sderosa-client-sdk-cpp

./: AGENTS.md  CMakeLists.txt  README.md  README_BUILD.md  build.sh
.github/workflows/: tests.yml
benchmarks/data_track_throughput/: consumer.cpp  producer.cpp
bridge/: CMakeLists.txt  README.md
bridge/src/: bridge_audio_track.cpp  bridge_data_track.cpp  bridge_room_delegate.cpp  bridge_room_delegate.h  bridge_video_track.cpp  livekit_bridge.cpp  rpc_controller.h
bridge/tests/: CMakeLists.txt  test_bridge_room_delegate.cpp
cmake/: LiveKitConfig.cmake.in
examples/: CMakeLists.txt
examples/bridge_human_robot/: human.cpp  robot.cpp
examples/bridge_mute_unmute/: README.md  caller.cpp  receiver.cpp
examples/data_tracks_demo/: README.md
examples/data_tracks_demo/setup/ProgramEprom/: CMakeLists.txt  ProgramEprom.cpp  SetLimits.cpp
examples/data_tracks_demo/setup/custom_calibration/: CMakeLists.txt  README.md  custom_calibration.cpp  custom_example  keyboard_controller.cpp
examples/servo_control/: main.cpp  servo_controller.cpp
examples/simple_bridge/: main.cpp
examples/simple_room/: main.cpp
examples/tokens/: README.md
examples/user_timestamped_video/: README.md  consumer.cpp  producer.cpp
include/livekit/: data_track_frame.h  data_track_subscription.h  e2ee.h  livekit.h  local_data_track.h  local_participant.h  local_video_track.h  remote_data_track.h  room.h  room_event_types.h  video_source.h  video_stream.h
include/session_manager/: rpc_constants.h  session_manager.h
src/: data_track_subscription.cpp  e2ee.cpp  ffi_client.cpp  ffi_client.h  local_data_track.cpp  local_participant.cpp  room.cpp  video_source.cpp
src/session_manager/: README.md  rpc_controller.h
src/tests/: CMakeLists.txt
(+26 files in other folders)
